# CPPeg

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: assertions.hpp  basic_rules.hpp  compound_rules.hpp  cppeg.hpp  cppeg_common.hpp  fwd_decls.hpp  helpers.hpp  input_stream.hpp  meta.hpp  rule.hpp
tests/: CMakeLists.txt  and_rule.cpp  basic_rules.cpp  callback.cpp  discard.cpp  or_rule.cpp
